tick.h

/*
tick.h
*/
int ClearTick();

unsigned long CurrentTickMs();

unsigned long CurrentTickUs();